give "main" a z-index so it "resets" the inner z-indexes. Fixes #7908

--- a/resources/css/components/global-header.css
+++ b/resources/css/components/global-header.css
@@ -4,7 +4,7 @@
 
 .global-header {
     @apply bg-white shadow pr-4 h-13 items-center flex relative w-full;
-    z-index: 2; /* The search focus overlay sits underneath using z-index 1. */
+    z-index: 3; /* The search focus overlay sits underneath using z-index 2. */
 }
 
 /* Responsive Wangjangling
