--- a/resources/css/core/layout.css
+++ b/resources/css/core/layout.css
@@ -14,6 +14,8 @@ body {
 #main {
     @apply flex;
     padding-bottom: 72px;
+    position: relative;
+    z-index: 1;
 }
 
 #main .workspace {
